src/components/Wrapper/wrapper.scss
.Wrapper {
    margin-top: 4em;
    text-align: center;

    & h1 {
        margin: auto;
        margin-bottom: 10px;
        width: 60%;
        font-size: 5.5rem;
        font-weight: 700;
        line-height: 1.3em;
    }

    & p {
        margin: auto;
        margin-bottom: 1em;
        width: 37%;
        font-weight: 500;
    }
}

